option('msvc_dir', type: 'string', value : '', description : 'The root directory for all msvc includes and libraries')
option('additional_include_dir', type: 'string', value: '', description : 'Path to custom include directory (if one exists)')
option('performance_profiling', type: 'boolean', value: false, description : 'Record a performance trace and save it to file')
